--- a/zodiac.scss
+++ b/zodiac.scss
@@ -55,7 +55,7 @@
   bottom: 0;
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: 40% !important;
+  background-size: 40%;
   opacity: 0.2; /* przezroczystość samego obrazu */
   pointer-events: none;
 }
