--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -387,9 +387,9 @@
     font-size: 16px;
   }
 
-  .body-rat::before {
-    background-size: 60%; /* zmniejsz tło na małych ekranach */
-  }
+  // .body-zodiac::before {
+  //   background-size: 40% !important; /* zmniejsz tło na małych ekranach */
+  // }
   .section-zodiac {
     width: 95%;
     margin: 40px auto;
