--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,7 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   cursor: pointer;
 }
@@ -414,8 +413,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAboutFengShui.jpg")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAboutFengShui.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -451,7 +449,7 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 ul {
@@ -469,8 +467,7 @@ ul {
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAbouUs.png")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAbouUs.png") no-repeat center;
   background-size: cover;
 }
 
@@ -577,7 +574,7 @@ ul {
   height: 200px;
   border-radius: 50%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   border: 4px solid #ccc;
   transition: border-color 0.3s ease;
 }
@@ -616,51 +613,51 @@ ul {
   pointer-events: none;
 }
 
-.body-zodiac[data-sign="rat"]::before {
+.body-zodiac[data-sign=rat]::before {
   background-image: url("../images/zodiacs/rat-logo.png");
 }
 
-.body-zodiac[data-sign="ox"]::before {
+.body-zodiac[data-sign=ox]::before {
   background-image: url("../images/zodiacs/ox-logo.png");
 }
 
-.body-zodiac[data-sign="dog"]::before {
+.body-zodiac[data-sign=dog]::before {
   background-image: url("../images/zodiacs/dog-logo.png");
 }
 
-.body-zodiac[data-sign="dragon"]::before {
+.body-zodiac[data-sign=dragon]::before {
   background-image: url("../images/zodiacs/dragon-logo.png");
 }
 
-.body-zodiac[data-sign="goat"]::before {
+.body-zodiac[data-sign=goat]::before {
   background-image: url("../images/zodiacs/goat-logo.png");
 }
 
-.body-zodiac[data-sign="horse"]::before {
+.body-zodiac[data-sign=horse]::before {
   background-image: url("../images/zodiacs/horse-logo.png");
 }
 
-.body-zodiac[data-sign="monkey"]::before {
+.body-zodiac[data-sign=monkey]::before {
   background-image: url("../images/zodiacs/mokey-logo.png");
 }
 
-.body-zodiac[data-sign="pig"]::before {
+.body-zodiac[data-sign=pig]::before {
   background-image: url("../images/zodiacs/pig-logo.png");
 }
 
-.body-zodiac[data-sign="rabbit"]::before {
+.body-zodiac[data-sign=rabbit]::before {
   background-image: url("../images/zodiacs/rabbit-logo.png");
 }
 
-.body-zodiac[data-sign="rooster"]::before {
+.body-zodiac[data-sign=rooster]::before {
   background-image: url("../images/zodiacs/rooster-logo.png");
 }
 
-.body-zodiac[data-sign="snake"]::before {
+.body-zodiac[data-sign=snake]::before {
   background-image: url("../images/zodiacs/snake-logo.png");
 }
 
-.body-zodiac[data-sign="tiger"]::before {
+.body-zodiac[data-sign=tiger]::before {
   background-image: url("../images/zodiacs/tiger-logo.png");
 }
 
@@ -845,7 +842,7 @@ header,
   height: auto;
   width: 100%;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 .custom-footer-content {
