--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -34,7 +34,7 @@
   }
 
   .bg-logo {
-    background: url("../../images/logo-transparent.png") no-repeat;
+    background: url("../../images/logo-transparent.webp") no-repeat;
     background-position: left 5vw top;
     background-size: 15% auto;
   }
