--- a/scss/pages/_aboutFengShui.scss
+++ b/scss/pages/_aboutFengShui.scss
@@ -9,8 +9,8 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAboutFengShui.jpg")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4)
+    url("../images/backgroundAboutFengShui.webp") no-repeat center;
   background-size: cover;
 }
 
