--- a/scss/pages/_aboutUs.scss
+++ b/scss/pages/_aboutUs.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAbouUs.png")
+  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAbouUs.webp")
     no-repeat center;
   background-size: cover;
 }
